...
import com.github.meeplemeet.ui.theme.Dimensions
import kotlinx.coroutines.launch

// Contains test tag constants for common UI components.
object CommonComponentsTestTags {
  const val IMAGE_CAROUSEL = "ImageCarousel"
  const val CAROUSEL_ADD_BUTTON = "CarouselAddButton"
  const val CAROUSEL_IMAGE = "CarouselImage"
  const val CAROUSEL_REMOVE_BUTTON = "CarouselRemoveButton"
  const val DOT = "dot"
  const val GALLERY_DIALOG_ROOT = "GalleryDialogRoot"
  const val PHOTO_DIALOG_BACK_BUTTON = "PhotoDialogBackButton"
  const val PHOTO_DIALOG_CAMERA_BUTTON = "PhotoDialogCameraButton"
  const val PHOTO_DIALOG_GALLERY_BUTTON = "PhotoDialogGalleryButton"
  const val CONFIRMATION_DIALOG = "ConfirmationDialog"
  const val CONFIRMATION_DIALOG_TITLE = "ConfirmationDialogTitle"
  const val CONFIRMATION_DIALOG_MESSAGE = "ConfirmationDialogMessage"
  const val CONFIRMATION_DIALOG_CONFIRM = "ConfirmationDialogConfirm"
  const val CONFIRMATION_DIALOG_CANCEL = "ConfirmationDialogCancel"
  const val CLOSABLE_TOAST = "ClosableToast"
  const val CLOSABLE_TOAST_CLOSE_BUTTON = "ClosableToastCloseButton"
  const val USER_PROFILE_POPUP_DESCRIPTION = "UserProfilePopupDescription"
  const val USER_PROFILE_POPUP_HANDLE = "UserProfilePopupHandle"
  const val USER_PROFILE_POPUP_USERNAME = "UserProfilePopupUsername"
  const val USER_PROFILE_POPUP_AVATAR = "UserProfilePopupAvatar"
...
