...
                    modifier = Modifier.testTag(NavigationTestTags.SCREEN_TITLE))
              },
              navigationIcon = {
                IconButton(onClick = onBack) {
                  Icon(
                      Icons.AutoMirrored.Filled.ArrowBack,
                      contentDescription = "Back",
                      modifier = Modifier.testTag(NavigationTestTags.GO_BACK_BUTTON))
                }
              })
          HorizontalDivider(
              modifier =
                  Modifier.fillMaxWidth(0.7f)
...
    onSelect: (Account) -> Unit
) {
  ExposedDropdownMenuBox(expanded = dropdownExpanded, onExpandedChange = {}) {
    OutlinedTextField(
        value = searchQuery,
        onValueChange = { onQueryChange(it) },
        label = { Text("Add Members") },
        modifier =
            Modifier.menuAnchor(type = MenuAnchorType.PrimaryEditable, enabled = true)
                .fillMaxWidth()
                .testTag("Add Members"),
        trailingIcon = {
          if (searchQuery.isNotBlank()) {
...
